Bug 328815 - Tar archives are not detected if they have a wrong extension
Summary: Tar archives are not detected if they have a wrong extension
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.19
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-14 22:05 UTC by illumilore
Modified: 2024-08-25 10:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illumilore 2013-12-14 22:05:13 UTC
when a file name has a name such as test.tar.gz, ark will open it, but if the file has a name such as test.tar~1.gz, ark will not be able to open it.

Reproducible: Always
Comment 1 Elvis Angelaccio 2015-10-19 14:29:06 UTC
Confirming. Actually Ark 15.08.02 does open it, but the archive is detected as .gz and the singlefile plugin is used. I'm rewriting the title of the bug.
Comment 2 Elvis Angelaccio 2015-10-21 17:24:55 UTC
Git commit 9e1607559db2e25aa3d3fecb9fe0dd1ca16dbc01 by Elvis Angelaccio.
Committed on 21/10/2015 at 17:18.
Pushed by elvisangelaccio into branch 'Applications/15.08'.

Fix opening of compressed tar archives with special characters in the extension

Compressed tar archives are detected as singlefile
archives when detecting the mimetype by content.
This means that we cannot rely on it to correctly
open such an archive with special characters in
the extension, as we do for the other plugins.
This patch performs input validation on the
filename extension of compressed tar archives.
Non-alpha characters are removed from the extension,
excluding periods, before detecting the mimetype by name.
FIXED-IN: 15.08.3

Differential Revision: D432

M  +15   -2    kerfuffle/archive_kerfuffle.cpp

http://commits.kde.org/ark/9e1607559db2e25aa3d3fecb9fe0dd1ca16dbc01
Comment 3 Elvis Angelaccio 2015-10-22 12:55:31 UTC
Git commit 5a70a0f84517b9738dc2738f50525c979280b686 by Elvis Angelaccio.
Committed on 22/10/2015 at 12:53.
Pushed by elvisangelaccio into branch 'master'.

Add test for special characters in suffix of compressed tar archives

M  +8    -1    kerfuffle/tests/mimetypetest.cpp

http://commits.kde.org/ark/5a70a0f84517b9738dc2738f50525c979280b686
Comment 4 Bug Janitor Service 2024-08-24 11:39:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/257
Comment 5 Elvis Angelaccio 2024-08-25 10:59:51 UTC
Git commit ce17329c915b5d37a15011823269a97c97f3a2d3 by Elvis Angelaccio.
Committed on 25/08/2024 at 10:31.
Pushed by elvisangelaccio into branch 'master'.

Fix validation of tar mimetypes

The validation code was ignoring any alpha chars *after* the extension,
which might be a pretty common case (e.g. one copies a foo.tar.gz file
into a foo.tar.gz_backup file or whatever).

It's not worth to fix this code, as it already has enough hacks added
over time.

The new approach introduced with this commit is much simpler: we just look
for the longest match between the filename's complete suffix and the
suffixes supported by the libarchive plugin. If we found a match, we
just replace it in place of the original complete suffix.

If the original suffix doesn't match, we try its stripped down version
(with non-alpha chars removed), as the old code did (see the CCBUG).

A bunch of test cases have been added (they did not pass before this
commit).

M  +10   -0    autotests/kerfuffle/mimetypetest.cpp
M  +38   -36   kerfuffle/mimetypes.cpp

https://invent.kde.org/utilities/ark/-/commit/ce17329c915b5d37a15011823269a97c97f3a2d3